# amath-586-final-project

./: CMakeLists.txt  Dockerfile  numpy.site.cfg  ode.cpp  ode.hpp  scratch.py  scripts.py  setup.cfg  test.py
src/ode/: crank_nicholson.py  properties.py  scaling.py
